[package]
name = "bao"
version = "0.1.0"
authors = ["jan"]
edition = "2018"
build = "build.rs"
[dependencies]
snafu = "0.6.9"
regex = "~1.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
simplelog = "0.8.0"
log = "~0.4"
clap = "2.33"

[dependencies.clang-sys]
version = "1.2.0"
features = ["clang_11_0"]

[dependencies.pdb_wrapper]
git = "https://github.com/jfm535/pdb_wrapper"
default-features = false
features = ["llvm_13"]
[dependencies.clang]
version = "1.0.3"
features = ["clang_10_0"]

[dependencies.goblin]
version = "~0.2"
features = ["std"]